<resources>
    <string name="app_name">Bar\nManager</string>
    <string name="app_name2">Bar Manager</string>
    <string name="copyright">© Orho Technologies</string>

    <!--Login frag hints-->
    <string name="enter_phone">Enter Phone Number</string>
    <string name="login">Login</string>
    <string name="verification_code">Verification Code</string>
    <string name="privacy">By logging in, you aggre to our\nprivacy policy and terms of service</string>
    <string name="verifyphone">Please type the verification code sent to\n</string>

    <!--Verify Activity-->
    <string name="verify_code">Verify Code</string>
    <string name="enter_code">Enter Code</string>
    <string name="_91">+91</string>

    <!--dialog_import -->
    <string name="custom">Custom</string>
    <string name="_import">Import</string>

    <!--Crud_item frag hints-->
    <string name="added">added</string>
    <string name="modified">modified</string>
    <string name="removed">removed</string>
    <string name="item_name">Item Name</string>
    <string name="item_barcode">Barcode (Optional)</string>
    <string name="select_type">Type</string>
    <string name="select_subtype">Subtype</string>
    <string name="bottle_of_ml">Bottle of ml</string>
    <string name="bottle_sell_price">Bottle Sell Price</string>
    <string name="bottles_in_box">Bottles in Box</string>
    <string name="box_sell_price">Box Sell Price</string>
    <string name="_30ml_sell_price">30ml Sell Price (Optional)</string>
    <string name="_45ml_sell_price">45ml Sell Price (Optional)</string>
    <string name="_60ml_sell_price">60ml Sell Price (Optional)</string>
    <string name="_90ml_sell_price">90ml Sell Price (Optional)</string>
    <string name="sell_price">Sell Price</string>
    <string name="items_in_box">Items in Box (Optional)</string>
    <string name="box_sell_price_opt">Box Sell Price(Optional)</string>
    <string name="full_plate_price">Full Plate Price</string>
    <string name="half_plate_price">Half Plate Price(Optional)</string>
    <string name="menu_search">Search</string>


    <!--CreateProfile frag hint-->
    <string name="create_profile">Create Profile</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="hotel_address">Hotel Address</string>
    <string name="super_admin_name">Super Admin Name</string>
    <string name="super_admin_phone">Super Admin UserName(Phone)</string>
    <string name="super_admin_password">Super Admin Password</string>

    <!--AllSells Frag text-->
    <string name="start_date">Start Date</string>

    <!--Crud_sell_frag hint-->
    <string name="end_date">End Date</string>
    <string name="date_and_time">Date and Time</string>
    <string name="itmes">Itmes</string>
    <string name="total_price">Total Price:</string>
    <string name="discount_price">Discount Price:</string>
    <string name="final_price">Final Price:</string>

    <!--StockUpdate Frag hint-->
    <string name="quantity">Quantity</string>
    <string name="select_unit">Select Unit</string>
    <string name="available_stock">Available Stock</string>

    <!--show Daybook frag hint-->
    <string name="date">Date</string>
    <string name="total_sell">Total Sell</string>
    <string name="total_discount">Total Discount</string>
    <string name="type">TYPE</string>
    <string name="subtype">SUBTYPE</string>
    <string name="no_data_available">No Data Available for this date</string>

    <!--Errors-->
    <string name="valide_price">Enter Valide Price(Only Digits)</string>
    <string name="valide_quantity">Enter Valide Quantity(Only Digits)</string>
    <string name="valide_number">Enter Valide Number(Only Digits)</string>

    <!--Menus of mainfrag-->
    <string-array name="DashMenus">
        <item>Items</item>
        <item>Traders</item>
        <item>Customers</item>
        <item>Purchase Bills</item>
        <item>New Sell</item>
        <item>Sell Bills</item>
        <item>DayBook</item>
        <item>SignOut</item>
    </string-array>


    <!--Item Types Array-->
    <string-array name="itemtypes">
        <item>Food</item>
        <item>Liquor</item>
        <item>Other</item>
    </string-array>

    <!--Item Subtypes Array liquor-->
    <string-array name="Liquor">
        <item>Beer</item>
        <item>Gin</item>
        <item>Rum</item>
        <item>Vodka</item>
        <item>Wine</item>
        <item>Wisky</item>
    </string-array>

    <!--Item Subtypes Array food-->
    <string-array name="Food">
        <item>Chinese</item>
        <item>Indian</item>
        <item>Punjabi</item>
        <item>Starter</item>
    </string-array>

    <!--Item Subtypes Array others-->
    <string-array name="Others">
        <item>SoftDrink</item>
        <item>Water</item>
        <item>IceCream</item>
        <item>Packed Food</item>
        <item>Cigarette</item>
    </string-array>

    <!--Item Bottle of ml Array -->
    <string-array name="Bom">
        <item>90</item>
        <item>180</item>
        <item>330</item>
        <item>375</item>
        <item>500</item>
        <item>650</item>
        <item>750</item>
        <item>1000</item>
        <item>2000</item>
    </string-array>

    <!--Item Box of bottle Array-->
    <string-array name="Bob">
        <item>4</item>
        <item>6</item>
        <item>9</item>
        <item>12</item>
        <item>18</item>
        <item>24</item>
        <item>48</item>
        <item>100</item>
    </string-array>


    <string-array name="Units">
        <item>Bottle (BTL)</item>
        <item>Gram (GM)</item>
        <item>KiloGram (KG)</item>
        <item>Litre (LTR)</item>
        <item>Milli Litre (ML)</item>
        <item>Packet (PKT)</item>
        <item>Piece (PCS)</item>
        <item>Plate (PLT)</item>
    </string-array>

    <!--Common-->
    <string name="tab">\u0009</string>
    <string name="remove">Remove</string>
    <string name="add">add</string>
    <string name="stock">Stock</string>
    <string name="available">AVAILABLE :  \u0009</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="submit">Submit</string>
    <string name="select">Select</string>
    <string name="rationale_camera">App needs access to your camera so you can scan Barcode.</string>


</resources>