<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="modeldaybook"
            type="com.orhotechnologies.barman.daybook.viewmodel.DaybookViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".daybook.fragment.ShowDaybookFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:title="Day Book"
            android:background="?attr/colorPrimary" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:clipToPadding="false"
            android:overScrollMode="never">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        app:date="@{modeldaybook.dayBookLiveData.date}"
                        tools:text="12 Jun 2021" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/smoky" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_sell"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

                    <TextView
                        android:id="@+id/tv_totalsell"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@{`Rs. `+String.valueOf(modeldaybook.dayBookLiveData.totalsell)}"
                        tools:text="12000.00" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
                        android:text="@string/total_discount" />

                    <TextView
                        android:id="@+id/tv_totaldiscount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@{`Rs. `+String.valueOf(modeldaybook.dayBookLiveData.totaldiscount)}"
                        tools:text="400.00" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
                        android:text="@string/final_price" />

                    <TextView
                        android:id="@+id/tv_finalprice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@{`Rs. `+String.valueOf(modeldaybook.dayBookLiveData.totalfinal)}"
                        tools:text="11600.00" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/smoky" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:baselineAligned="true"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tinp_actv_type"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1">

                        <com.orhotechnologies.barman.ui.ExposedDropdownMenu
                            android:id="@+id/actv_type"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/type"
                            android:maxLines="1"
                            android:inputType="none"
                            tools:ignore="LabelFor,TextContrastCheck,SpeakableTextPresentCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tinp_actv_subtype"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1">

                        <com.orhotechnologies.barman.ui.ExposedDropdownMenu
                            android:id="@+id/actv_subtype"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/subtype"
                            android:maxLines="1"
                            android:inputType="none"
                            tools:ignore="LabelFor,TextContrastCheck,SpeakableTextPresentCheck" />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linlay_select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_select"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
                        tools:text="Liquor - Wisky Sell" />

                    <TextView
                        android:id="@+id/tv_selectsell"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        tools:text="11600.00" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/smoky"
                    android:clipToPadding="false"
                    android:overScrollMode="never"
                    android:padding="1dp"
                    app:bindList="@{modeldaybook.dayBookLiveData.offerdaysell.values()}" />


            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

        <FrameLayout
            android:id="@+id/frm_load"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:background="@android:color/white"
            android:padding="24dp">

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_data_available"
                android:visibility="gone" />

        </FrameLayout>


    </RelativeLayout>


</layout>