<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <import type="com.orhotechnologies.barman.sell.databinding.Converter"/>
        <variable
            name="sellviewmodel"
            type="com.orhotechnologies.barman.sell.viewmodel.SellViewModel" />
        <variable
            name="modelitem"
            type="com.orhotechnologies.barman.item.model.Items" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".sell.fragment.SellStockUpdate">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/toolbar"
            android:background="@color/smoky" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/line"
            android:clipToPadding="false"
            android:overScrollMode="never">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tinp_itemname"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:hint="@string/item_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/iet_itemname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:enabled="false"
                        android:inputType="text"
                        android:text="@={sellviewmodel.itemtrade.name}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tinp_stock"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:hint="@string/available_stock">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/iet_stock"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:enabled="false"
                        android:visibility="@{modelitem==null?View.GONE:View.VISIBLE}"
                        android:inputType="text"
                        app:stock="@{modelitem}"
                        app:appendStart="@{``}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tinp_offer"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp">

                    <com.orhotechnologies.barman.ui.ExposedDropdownMenu
                        android:id="@+id/actv_offer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/select_unit"
                        android:inputType="none"
                        android:text="@{sellviewmodel.itemtrade.offer}"
                        tools:ignore="LabelFor,TextContrastCheck,SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tinp_quantity"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:hint="@string/quantity">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ietquantity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:text="@{Converter.quantityToString(ietquantity,sellviewmodel.itemtrade.quantity,sellviewmodel.itemtrade.quantity)}"
                        tools:ignore="TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>
</layout>